# dummy-FastAPI-project

./: README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: dae959071ef2_initial_tables.py
backend/app/: main.py
backend/app/database/: crud_author.py  crud_book.py  crud_reservation.py  crud_user.py  database.py
backend/app/database/crud/: __init__.py  crud_fine.py  crud_loan.py  crud_review.py
backend/app/models/: README.md  __init__.py  author.py  book.py  fine.py  genre.py  loan.py  reservation.py  review.py  user.py
backend/app/routes/: __init__.py  router_author.py  router_book.py  router_fine.py  router_genre.py  router_loan.py  router_reservation.py  router_review.py  router_user.py
backend/app/schema/: __init__.py  genre.py  loan.py  user.py
backend/models/: README.md  author.py  book.py  fine.py  genre.py  loan.py  reservation.py  review.py  user.py
backend/schema/: author.py  book.py  fine.py  reservation.py  review.py
